test_suite/tests/compile_fail/invalid_serde_attr_multiple.rs

#[derive(serde_unstructured::SerdeView)]
struct Data {
    #[serde(what)]
    a: u8,
    #[serde(are)]
    b: String,
    #[serde(you())]
    c: usize,
    #[serde(doing = to::this::attribute)]
    d: bool,
}

fn main() {}